# anywebsearch

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
anywebsearch/: __init__.py  search.py  tools.py
anywebsearch/engines/: __init__.py  brave.py  duck.py  google.py  qwant.py  yandex.py
